--- a/cli/src/app/shared/layout/admin-layout/admin-layout.component.html
+++ b/cli/src/app/shared/layout/admin-layout/admin-layout.component.html
@@ -8,6 +8,13 @@
   >
   </app-admin-header>
 
+  <!-- Mobile backdrop -->
+  <div
+    *ngIf="!isSidebarCollapsed"
+    class="fixed inset-0 bg-black bg-opacity-50 z-30 lg:hidden transition-opacity duration-300"
+    (click)="onToggleSidebar()"
+  ></div>
+
   <!-- Content wrapper -->
   <div class="flex">
     <!-- Admin Sidebar -->
@@ -19,9 +26,9 @@
 
     <!-- Main content area -->
     <main
-      class="flex-1 p-6 transition-all duration-300"
-      [class.ml-64]="!isSidebarCollapsed"
-      [class.ml-16]="isSidebarCollapsed"
+      class="flex-1 p-4 sm:p-6 transition-all duration-300 w-full"
+      [class.lg:ml-64]="!isSidebarCollapsed"
+      [class.lg:ml-16]="isSidebarCollapsed"
     >
       <div class="max-w-7xl mx-auto">
         <router-outlet></router-outlet>
