--- a/cli/src/app/features/admin/contest-management/components/contest-list/contest-list.component.html
+++ b/cli/src/app/features/admin/contest-management/components/contest-list/contest-list.component.html
@@ -37,8 +37,8 @@
           <th scope="col" class="w-4 px-2 sm:px-3 py-3 sticky left-0 bg-gray-50 dark:bg-gray-700 z-20">
             <input
               type="checkbox"
-              [(ngModel)]="selectAllChecked"
-              (change)="onSelectAll()"
+              [checked]="selectAllChecked"
+              (change)="onSelectAll($event)"
               class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600"
             />
           </th>
